force-app/main/default/objects/HubSpotEvent__c/HubSpotEvent__c.object-meta.xml
<CustomObject>
    <label>HubSpot Event</label>
    <nameField>
        <displayFormat>HE-{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HubSpot Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>