force-app/main/default/objects/HubSpotEvent__c/fields/GreetingName__c.field-meta.xml
<CustomField>
    <fullName>GreetingName__c</fullName>
    <label>Greeting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>