force-app/main/default/objects/HubSpotEvent__c/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>To Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>