force-app/main/default/objects/HubSpotEvent__c/fields/ToName__c.field-meta.xml
<CustomField>
    <fullName>ToName__c</fullName>
    <label>To Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>