force-app/main/default/objects/HubSpotEvent__c/fields/Value03__c.field-meta.xml
<CustomField>
    <fullName>Value03__c</fullName>
    <label>Value03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>