force-app/main/default/objects/HubSpotEvent__c/fields/Value04__c.field-meta.xml
<CustomField>
    <fullName>Value04__c</fullName>
    <label>Value04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>